fixe overflow errors, fml

--- a/src/Tracker/TrackerMenu/TrackerMenu.css
+++ b/src/Tracker/TrackerMenu/TrackerMenu.css
@@ -30,10 +30,15 @@
     animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 .TrackerMenuThemes {
     display: flex;
     width: 100%;
-    height: 100px;
+    height: 110px;
     margin-top: 3px;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -54,6 +59,7 @@
     border-radius: 8px;
     margin-left: 1px;
     margin-right: 1px;
+
 }
 
 .TrackerMenuTheme img {
@@ -75,7 +81,7 @@
     display: flex;
     width: 300px;
     height: 40px;
-    margin-top: -3px;
+    margin-top: -15px;
 }
 
 .TrackerMenuFooter {
